# bolao_copa

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/bi/: bi-looker-specialist.md
.claude/agents/frontend/: ui-designer.md  ux-specialist.md
.claude/commands/core/: usage.md
.claude/hooks/: post-stop-notify.js  post-write-ruff.js  pre-bash-cloud-safety.js  pre-bash-danger-guard.js  pre-bash-secrets.js  pre-bash-sqz.js  stop-loop.js
.claude/kb/: _index.yaml
.claude/kb/agents/: index.md  quick-reference.md
.claude/kb/aws-safety/: index.md  quick-reference.md
.claude/kb/azure-safety/: index.md  (+1 more)
.claude/rules/: cloud-safety.md  python-style.md  sdd-workflow.md
.streamlit/: secrets.toml.example
dashboard/: __init__.py  app.py
dashboard/components/: prediction_card.py  sentiment_gauge.py
dashboard/pages/: h2h_explorer.py  match_analyzer.py  odds_monitor.py  sentiment.py  team_profile.py  tournament.py
data/: copa2026_fixtures.json  copa2026_standings.json  teams_48.json
scripts/: gen_copa2026_data.py  init_historical.py  seed_copa2026_form.py  upload_copa2026_meta.py
src/: __init__.py  config.py
src/analyzers/: __init__.py  match_analyzer.py  sentiment.py
src/collectors/: __init__.py  api_football.py  football_data.py  historical.py  news.py  odds.py
src/pipeline/: run_daily.py
src/schemas/: __init__.py  match.py  sentiment.py  team.py
src/storage/: __init__.py  gcs.py
tests/: test_collectors.py  test_gcs.py  test_match_analyzer.py  test_schemas.py  test_sentiment.py
(+120 files in other folders)
