[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bolao-copa"
version = "0.1.0"
description = "Copa do Mundo 2026 match analyzer — LLM-powered scoreline predictions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "google-cloud-storage>=2.18.0",
    "google-auth>=2.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "streamlit>=1.39.0",
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "kaggle>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src", "dashboard"]
